# opencode-postgres-memory-plugin

./: .envrc  .gitignore  README.md  justfile  opencode.json  package.json  pyproject.toml  tsconfig.json
.config/: opencode.json
.github/workflows/: publish.yml
.postgres_memory/: log  postgresql.conf  postmaster.opts  postmaster.pid
.postgres_memory/base/1/: 1249  1249_vm  1255  1255_vm  1259  12604  12605  12609  2602_vm  2605_vm  2607_vm  2608  2609  2609_vm  2610  2610_vm  2612  2612_vm  2615_vm  2616_vm  2618_vm  2619  2619_vm  2673  2674  2675  2679  2681  2690  2696  2703  2836  2838_vm  2839  2840  2840_vm  2841  3079  3079_vm  3080  (+7 more)
.postgres_memory/base/4/: 1247  1247_vm  1259  12590  12590_vm  12595  12595_vm  1259_vm  12600  12600_vm  12605_vm  2600_vm  2601_vm  2603_vm  2606  2606_vm  2608_vm  2615  2617_vm  2618  2619_fsm  2659  2662  2663  2678  2682  2691  2692  2693  2704  2753_vm  2836_vm  3456  3600  3600_vm  3602  3602_vm  3603  3764_vm
.postgres_memory/base/5/: 1247  1247_fsm  1247_vm  1255  1255_fsm  1255_vm  2600  2600_vm  2601  2601_vm  2602  2602_vm  2603  2603_vm  2605  2605_fsm  2605_vm  2608  (+42 more)
.postgres_memory/global/: 1213_vm  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control
mcp-server/: README.md  pyproject.toml
mcp-server/src/opencode_memory_mcp/: mcp_server.py
mcp-server/tests/: test_mcp_server.py
src/: cli.py  index.ts  mcp_server.py  postgres_memory_cli.py
src/opencode_memory/: mcp_server.py
tests/integration/: memory-plugin.test.ts  postgres-memory-plugin.test.ts  test-opencode.json
