[project]
name = "opencode-memory-mcp"
version = "0.1.0"
description = "FastMCP wrapper for opencode-memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
]

[project.scripts]
opencode-memory-mcp = "opencode_memory_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
